--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,3 +62,8 @@ torch = [
 # torchvision = [
 #   { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
 # ]
+
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
