--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,8 @@ explicit = true
 
 [tool.uv.sources]
 torch = [
-	{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+	#{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
 ]
 # torchvision = [
 #   { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
