--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,30 +24,31 @@ dependencies = [
 	# # "tensorflow-cpu>=2.18.0", # CPU version of TensorFlow
 	# # "tensorflow-gpu>=2.18.0", # GPU version of TensorFlow
 	# Tools
-	"ipykernel>=6.29.5", # Jupyter kernel
+	"notebook>=7.4.5",
+	"ipykernel>=6.30.1", # Jupyter kernel
 	# Data Science & ML
 	"numpy", # Numerical computing
 	# "pandas>=1.4.0",        # Data manipulation
-	"polars>=1.31.0", # Fast DataFrame library in Rust
-	# "scikit-learn>=1.6.1", # Traditional machine learning
-	# "scipy>=1.15.2",       # Scientific computing
-	"matplotlib>=3.10.3", # Plotting and visualization
+	"polars>=1.32.3", # Fast DataFrame library in Rust
+	# "scikit-learn>=1.7.1", # Traditional machine learning
+	# "scipy>=1.16.1",       # Scientific computing
+	"matplotlib>=3.10.5", # Plotting and visualization
 	"seaborn>=0.13.2", # Statistical data visualization
 	# Computer Vision
-	"opencv-python>=4.11.0.86", # CV2 for computer vision
-	"pillow>=11.2.1", # Image processing
+	"opencv-python>=4.12.0.88", # CV2 for computer vision
+	"pillow>=11.3.0", # Image processing
 	# # Natural Language Processing
-	# "transformers>=4.49.0", # State-of-art NLP models
-	# "spacy>=3.8.4",        # Industrial-strength NLP
+	# "transformers>=4.55.3", # State-of-art NLP models
+	# "spacy>=3.8.7",        # Industrial-strength NLP
 	# "nltk>=3.9.1",         # Natural Language Toolkit
 	# AI
-	"google-genai>=1.21.1",
+	"google-genai>=1.31.0",
 	# * MCP
-	"mcp[cli]>=1.9.4",
+	"mcp[cli]>=1.13.0",
 	# Some:
 	"httpx>=0.28.1",
-	"gitingest>=0.1.5",
-	"rich>=14.0.0",
+	"gitingest>=0.3.1",
+	"rich>=14.1.0",
 ]
 
 [[tool.uv.index]]
@@ -57,8 +58,7 @@ explicit = true
 
 [tool.uv.sources]
 torch = [
-	#{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
-  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
+	{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
 ]
 # torchvision = [
 #   { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
